changes in index.html

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                         <a href="https://github.com/Vernnit"
                             class="btn-rounded btn btn-outline-primary float right mt-4 mr-5">Github</a>
                         <a href="https://www.linkedin.com/in/vernnit-verma-0a64b1230"
-                            class="btn-rounded btn btn-outline-primary mt-4">Linkedin</a>
+                            class="btn-rounded btn btn-outline-primary mt-4 mr-5">Linkedin</a>
                 </div>
             </div><!-- end of about wrapper -->
         </div><!-- end of container -->
