--- a/index.html
+++ b/index.html
@@ -82,12 +82,14 @@
                     <p>
                         I believe one should always be lively in all phases of life. Life is all about facing new
                         challenges everyday. Main purpose is to face them with courage yet enjoying life to the fullest.
-                        <a href="static/assets/MYCV.pdf" download
-                            class="btn-rounded btn btn-outline-primary mt-4 mr-5">Download CV</a>
-                        <a href="https://github.com/Vernnit"
-                            class="btn-rounded btn btn-outline-primary float right mt-4 mr-5">Github</a>
-                        <a href="https://www.linkedin.com/in/vernnit-verma-0a64b1230"
-                            class="btn-rounded btn btn-outline-primary mt-4 mr-5">Linkedin</a>
+                        <a href="static/assets/MYCV.pdf" download>
+                            <button class="btn-rounded btn btn-outline-primary mt-4 mr-5">Download CV</button>
+                        </a>
+                        <a href="https://github.com/Vernnit">
+                            <button
+                                class="btn-rounded btn btn-outline-primary float right mt-4 mr-5">Github</button></a>
+                        <a href="https://www.linkedin.com/in/vernnit-verma-0a64b1230">
+                            <button class="btn-rounded btn btn-outline-primary mt-4 mr-5">Linkedin</button></a>
                 </div>
             </div><!-- end of about wrapper -->
         </div><!-- end of container -->
