changes in index.html

--- a/index.html
+++ b/index.html
@@ -84,13 +84,12 @@
                         challenges everyday. Main purpose is to face them with courage yet enjoying life to the fullest.
                     <div class="button-container">
                         <a href="static/assets/MYCV.pdf" download>
-                            <button class="btn-rounded btn btn-outline-primary mt-4 mr-5">Download CV</button>
+                            <button class="btn-rounded btn btn-outline-primary mt-4 ">Download CV</button>
                         </a>
                         <a href="https://github.com/Vernnit">
-                            <button
-                                class="btn-rounded btn btn-outline-primary float right mt-4 mr-5">Github</button></a>
+                            <button class="btn-rounded btn btn-outline-primary float right mt-4 ">Github</button></a>
                         <a href="https://www.linkedin.com/in/vernnit-verma-0a64b1230">
-                            <button class="btn-rounded btn btn-outline-primary mt-4 mr-5">Linkedin</button></a>
+                            <button class="btn-rounded btn btn-outline-primary mt-4 ">Linkedin</button></a>
                     </div>
                 </div>
             </div><!-- end of about wrapper -->
