--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
                     <a class="link" href="#about">About</a>
                 </li>
                 <li class="item">
+                    <a class="link" href="#resume">Resume</a>
+                </li>
+                <li class="item">
                     <a class="link" href="#works">Works</a>
                 </li>
                 <li class="item">
@@ -95,6 +98,17 @@
             </div><!-- end of about wrapper -->
         </div><!-- end of container -->
     </section> <!-- end of about section -->
+
+    <!--Resume Section-->
+    <section class="section" id="resume">
+        <div class="container text-center">
+            <div class="resume">
+                <h2 class="section-title mb-3">My Resume</h2>
+                <embed src="static/assets/MYCV.pdf" width="800px" height="2100px" />
+            </div>
+        </div>
+    </section>
+    <!--End of Resume Section-->
 
     <!-- works section -->
     <section class="section" id="works">
