--- a/index.html
+++ b/index.html
@@ -73,18 +73,25 @@
                     <p class="section-subtitle">Who Am I ?</p>
                     <h2 class="section-title mb-3">About Me</h2>
                     <p>
-                        I am yet another human from Type 0.7 Civilization pursuing my Bachelors in Engineering Physics
-                        from National Institute of Technology Hamirpur, Himachal Pradesh, India. I am keenly interested
-                        in the field of Data Analytics, Machine Learning & Artificial Intelligence, Computer Science and
-                        multiple sub branches of physics like Astrophysics, Particle Physics and Quantum Computing.
+                        <b>I am yet another human from Type 0.7 Civilization pursuing my Bachelors in Engineering
+                            Physics
+                            from National Institute of Technology Hamirpur, Himachal Pradesh, India. I am keenly
+                            interested
+                            in the field of Data Analytics, Machine Learning & Artificial Intelligence, Computer Science
+                            and
+                            multiple sub branches of physics like Astrophysics, Particle Physics and Quantum
+                            Computing.</b>
                     </p>
-                    <p>
-                        My Competitiveness and keen interest for learning new things with strong determination, along
-                        with my polite nature are some of my key qualities.
+                    <p><b>
+                            My Competitiveness and keen interest for learning new things with strong determination,
+                            along
+                            with my polite nature are some of my key qualities.</b>
                     </p>
-                    <p>
-                        I believe one should always be lively in all phases of life. Life is all about facing new
-                        challenges everyday. Main purpose is to face them with courage yet enjoying life to the fullest.
+                    <p><b>
+                            I believe one should always be lively in all phases of life. Life is all about facing new
+                            challenges everyday. Main purpose is to face them with courage yet enjoying life to the
+                            fullest.
+                        </b></p>
                     <div class="button-container">
                         <a href="static/assets/MYCV.pdf" download>
                             <button class="btn-rounded btn btn-outline-primary mt-4 ">Download CV</button>
@@ -98,15 +105,125 @@
             </div><!-- end of about wrapper -->
         </div><!-- end of container -->
     </section> <!-- end of about section -->
+    <br><br>
 
     <!--Resume Section-->
     <section class="section" id="resume">
-        <div class="container text-center">
-            <div class="resume">
-                <h2 class="section-title mb-3">My Resume</h2>
-                <embed src="static/assets/MYCV.pdf" width="800px" height="2100px" />
+        <page size="A4">
+            <div class="container text-center">
+                <div class="resume">
+                    <p class="section-subtitle">Curriculum Vitae ?</p>
+                    <h2 class="section-title mb-3">My Resume</h2>
+                </div>
+                <div>
+                    <br><br><br>
+                    <hr style="height:0.5px;border:none;color:#454545;background-color:#333;">
+                    <h1>VERNNIT VERMA</h1>
+                    <p><b>vernnit@gmail.com &nbsp; &nbsp; &nbsp; 7876943319</b></p>
+                    <p><b>Village Ghumana , Tehesil Kumarsain, District Shimla, Himachal Pradesh</b></p>
+                    <hr>
+                </div>
             </div>
-        </div>
+            <div>
+                <h4>OBJECTIVE</h4>
+                <p><b>
+                        Enthusiastic and dedicated beginner seeking an internship. Eager to embark on a journey of
+                        practical exploration, I find joy in solving realistic problems , coding , performing
+                        experiments and
+                        observing results firsthand. Although new to the field, my strong work ethic and passion for
+                        hands on learning drive my commitment. Excited about the opportunity to apply theoretical
+                        knowledge to
+                        real-world scenarios, I am ready to contribute earnestly and learn extensively during my
+                        internship.</b></p>
+                <hr>
+
+                <br>
+                <h4>EDUCATION</h4>
+                <h6 style="color:black;">National Institute of Technology Hamirpur <span class="right">2025</span>
+                </h6>
+                <p><b>B.Tech Engineering Physics (Physics and Photonics) (ongoing)</b></p>
+
+                <h6 style="color:black;">D.A.V. SJVN Public School , Duttnagar , Himachal Pradesh
+                    <span class="right">2020</span>
+                </h6>
+                <p><b>Secondary Education (CBSE Board): 87.4%</b></p>
+
+                <h6 style="color:black;">D.A.V. Public School , Kumarsain, Himachal Pradesh
+                    <span class="right">2018</span>
+                </h6>
+                <p><b>High School Education (CBSE Board): 90.6%</b></p>
+                <hr>
+                <br>
+                <h4><span class="left">KEY COMPETENCIES</span> <span class="right">SKILLS AND TOOLS</span></h4><br>
+                <ul><span class="left">
+                        <li>Data-driven strategic planning</li>
+                        <li>Proficient in research methodology</li>
+                        <li>Effective teaching and mentoring abilities</li>
+                        <li>Strong report writing and presentation skills</li>
+                        <li>Advanced critical thinking capabilities</li>
+                        <li>Exceptional communication proficiency</li>
+                        <li>Proactive and self-motivated mindset</li>
+                        <li>UI/UX Design</li>
+                    </span><span class="right">
+                        <li>Python (Advanced proficiency)</li>
+                        <li>Data Structures and Algorithms</li>
+                        <li>Matlab (basic)</li>
+                        <li>Jupyter Notebooks</li>
+                        <li>Git and Github</li>
+                        <li>Figma (intermediate)</li>
+                        <li>Scientific writing</li>
+                        <li>Project management skills</li>
+                    </span></ul>
+                <br><br><br><br><br><br><br><br><br>
+                <hr>
+                <h4>COURSEWORK</h4>
+                <ul>
+                    <li>Data Structures and Algorithms</li>
+                    <li>Semiconductors</li>
+                    <li>Laser and Photonics</li>
+                    <li>Quantum Mechanics</li>
+                    <li>Classical Mechanics</li>
+                    <li>Nuclear Science</li>
+                    <li>Atomic and Molecular Physics</li>
+                    <li>Spectroscopy</li>
+                    <li>Plasma Physics</li>
+                    <li>Nanotechnology</li>
+                </ul>
+                <br>
+                <hr>
+                <h4>EXTRA CURRICULAR ACTIVITIES</h4>
+                <ul>
+                    <li><b>Finance Team Member, Hill'ffair</b><br>
+                        National Institute of Technology Hamirpur<br><br>
+                        Contributed to the finance team for Hill'ffair, ensuring efficient financial operations and
+                        budget
+                        management for the annual cultural and technical festival.</li><br>
+                    <li><b>Discipline Club member , Hill’ffair</b><br>
+                        National Institute of Technology Hamirpur<br><br>
+                        Ensured Proper conduct of various events with in the campus in a disciplined manner , ensuring
+                        proper obeyance of rules and regulations of our college.</li>
+
+                </ul><br>
+                <hr>
+                <h4>INTERESTS AND HOBBIES</h4>
+                <ul>
+                    <li>Volunteerism for Environmental Conservation Projects: Engaging in initiatives to</li>
+                    preserve and protect the environment.
+                    <li>Photography: Capturing moments and scenes that inspire, from nature to city scapes.</li>
+                    <li>Trekking and Hiking: Enjoying outdoor adventures and exploring new trails and peaks.</li>
+                    <li>Music Production : Enjoy producing music and writing songs.</li>
+                    <li>Cooking: Experimenting with flavors and cuisines to create delicious meals.</li>
+                    <li>Gardening: Nurturing plants and creating vibrant green spaces for relaxation.</li>
+                    <li>Drawing and sketching: I also enjoy my free time drawing and sketching a little bit.</li>
+
+                </ul>
+                <br>
+                <hr>
+                <br>
+                <hr style="height:1px;border:none;color:#333;background-color:#333;">
+
+            </div>
+        </page>
     </section>
     <!--End of Resume Section-->
 
