--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     <br><br>
 
     <!--Resume Section-->
-    <section class="section" id="resume">
+    <article class="section" id="resume">
             <div class="container text-center">
                 <div class="resume">
                     <p class="section-subtitle">Curriculum Vitae ?</p>
@@ -222,7 +222,7 @@
                 <hr style="height:1px;border:none;color:#333;background-color:#333;">
 
             </div>
-    </section>
+    </article>
     <!--End of Resume Section-->
 
     <!-- works section -->
