--- a/index.html
+++ b/index.html
@@ -108,7 +108,8 @@
     <br><br>
 
     <!--Resume Section-->
-    <article class="section" id="resume">
+    <section class="section" id="resume">
+        <div class="page" data-size="A4">
             <div class="container text-center">
                 <div class="resume">
                     <p class="section-subtitle">Curriculum Vitae ?</p>
@@ -153,27 +154,30 @@
                 <p><b>High School Education (CBSE Board): 90.6%</b></p>
                 <hr>
                 <br>
-                <h4><span class="left">KEY COMPETENCIES</span> <span class="right">SKILLS AND TOOLS</span></h4><br>
-                <ul><span class="left">
-                        <li>Data-driven strategic planning</li>
-                        <li>Proficient in research methodology</li>
-                        <li>Effective teaching and mentoring abilities</li>
-                        <li>Strong report writing and presentation skills</li>
-                        <li>Advanced critical thinking capabilities</li>
-                        <li>Exceptional communication proficiency</li>
-                        <li>Proactive and self-motivated mindset</li>
-                        <li>UI/UX Design</li>
-                    </span><span class="right">
-                        <li>Python (Advanced proficiency)</li>
-                        <li>Data Structures and Algorithms</li>
-                        <li>Matlab (basic)</li>
-                        <li>Jupyter Notebooks</li>
-                        <li>Git and Github</li>
-                        <li>Figma (intermediate)</li>
-                        <li>Scientific writing</li>
-                        <li>Project management skills</li>
-                    </span></ul>
-                <br><br><br><br><br><br><br><br><br>
+                <h4>KEY COMPETENCIES</h4><br>
+                <ul>
+                    <li>Data-driven strategic planning</li>
+                    <li>Proficient in research methodology</li>
+                    <li>Effective teaching and mentoring abilities</li>
+                    <li>Strong report writing and presentation skills</li>
+                    <li>Advanced critical thinking capabilities</li>
+                    <li>Exceptional communication proficiency</li>
+                    <li>Proactive and self-motivated mindset</li>
+                    <li>UI/UX Design</li>
+                </ul>
+                <h4>SKILLS AND TOOLS</h4>
+                <ul>
+                    <li>Python (Advanced proficiency)</li>
+                    <li>Data Structures and Algorithms</li>
+                    <li>Matlab (basic)</li>
+                    <li>Jupyter Notebooks</li>
+                    <li>Git and Github</li>
+                    <li>Figma (intermediate)</li>
+                    <li>Scientific writing</li>
+                    <li>Project management skills</li>
+
+                </ul>
+                <br>
                 <hr>
                 <h4>COURSEWORK</h4>
                 <ul>
@@ -222,7 +226,8 @@
                 <hr style="height:1px;border:none;color:#333;background-color:#333;">
 
             </div>
-    </article>
+        </div>
+    </section>
     <!--End of Resume Section-->
 
     <!-- works section -->
