--- a/index.html
+++ b/index.html
@@ -118,15 +118,15 @@
                 <div>
                     <br><br><br>
                     <hr style="height:0.5px;border:none;color:#454545;background-color:#333;">
-                    <h1>VERNNIT VERMA</h1>
-                    <p><b>vernnit@gmail.com &nbsp; &nbsp; &nbsp; 7876943319</b></p>
-                    <p><b>Village Ghumana , Tehesil Kumarsain, District Shimla, Himachal Pradesh</b></p>
+                    <h1 class="section-title">VERNNIT VERMA</h1>
+                    <p class="divtext"><b>vernnit@gmail.com &nbsp; &nbsp; &nbsp; 7876943319</b></p>
+                    <p class="divtext"><b>Village Ghumana , Tehesil Kumarsain, District Shimla, Himachal Pradesh</b></p>
                     <hr>
                 </div>
             </div>
-            <div>
-                <h4>OBJECTIVE</h4>
-                <p><b>
+            <div class="divtext">
+                <h4 class="htext class=" htext"">OBJECTIVE</h4>
+                <p class="divtext"><b>
                         Enthusiastic and dedicated beginner seeking an internship. Eager to embark on a journey of
                         practical exploration, I find joy in solving realistic problems , coding , performing
                         experiments and
@@ -138,23 +138,24 @@
                 <hr>
 
                 <br>
-                <h4>EDUCATION</h4>
-                <h6 style="color:black;">National Institute of Technology Hamirpur <span class="right">2025</span>
+                <h4 class="htext">EDUCATION</h4>
+                <h6 class="divtext" style="color:black;">National Institute of Technology Hamirpur <span
+                        class="right">2025</span>
                 </h6>
-                <p><b>B.Tech Engineering Physics (Physics and Photonics) (ongoing)</b></p>
+                <p class="divtext"><b>B.Tech Engineering Physics (Physics and Photonics) (ongoing)</b></p>
 
-                <h6 style="color:black;">D.A.V. SJVN Public School , Duttnagar , Himachal Pradesh
+                <h6 class="divtext" style="color:black;">D.A.V. SJVN Public School , Duttnagar , Himachal Pradesh
                     <span class="right">2020</span>
                 </h6>
-                <p><b>Secondary Education (CBSE Board): 87.4%</b></p>
+                <p class="divtext"><b>Secondary Education (CBSE Board): 87.4%</b></p>
 
-                <h6 style="color:black;">D.A.V. Public School , Kumarsain, Himachal Pradesh
+                <h6 class="divtext" style="color:black;">D.A.V. Public School , Kumarsain, Himachal Pradesh
                     <span class="right">2018</span>
                 </h6>
-                <p><b>High School Education (CBSE Board): 90.6%</b></p>
+                <p class="divtext"><b>High School Education (CBSE Board): 90.6%</b></p>
                 <hr>
                 <br>
-                <h4>KEY COMPETENCIES</h4><br>
+                <h4 class="htext">KEY COMPETENCIES</h4>
                 <ul>
                     <li>Data-driven strategic planning</li>
                     <li>Proficient in research methodology</li>
@@ -165,7 +166,7 @@
                     <li>Proactive and self-motivated mindset</li>
                     <li>UI/UX Design</li>
                 </ul>
-                <h4>SKILLS AND TOOLS</h4>
+                <h4 class="htext">SKILLS AND TOOLS</h4>
                 <ul>
                     <li>Python (Advanced proficiency)</li>
                     <li>Data Structures and Algorithms</li>
@@ -179,7 +180,7 @@
                 </ul>
                 <br>
                 <hr>
-                <h4>COURSEWORK</h4>
+                <h4 class="htext">COURSEWORK</h4>
                 <ul>
                     <li>Data Structures and Algorithms</li>
                     <li>Semiconductors</li>
@@ -194,7 +195,7 @@
                 </ul>
                 <br>
                 <hr>
-                <h4>EXTRA CURRICULAR ACTIVITIES</h4>
+                <h4 class="htext">EXTRA CURRICULAR ACTIVITIES</h4>
                 <ul>
                     <li><b>Finance Team Member, Hill'ffair</b><br>
                         National Institute of Technology Hamirpur<br><br>
@@ -208,7 +209,7 @@
 
                 </ul><br>
                 <hr>
-                <h4>INTERESTS AND HOBBIES</h4>
+                <h4 class="htext">INTERESTS AND HOBBIES</h4>
                 <ul>
                     <li>Volunteerism for Environmental Conservation Projects: Engaging in initiatives to</li>
                     preserve and protect the environment.
