--- a/index.html
+++ b/index.html
@@ -109,125 +109,128 @@
 
     <!--Resume Section-->
     <section class="section" id="resume">
-        <div class="page" data-size="A4">
-            <div class="container text-center">
-                <div class="resume">
-                    <p class="section-subtitle">Curriculum Vitae ?</p>
-                    <h2 class="section-title mb-3">My Resume</h2>
+        <section class="resumesection">
+            <div class="page" data-size="A4">
+                <div class="container text-center">
+                    <div class="resume">
+                        <p class="section-subtitle">Curriculum Vitae ?</p>
+                        <h2 class="section-title mb-3">My Resume</h2>
+                    </div>
+                    <div>
+                        <br><br><br>
+                        <hr style="height:0.5px;border:none;color:#454545;background-color:#333;">
+                        <h1>VERNNIT VERMA</h1>
+                        <p><b>vernnit@gmail.com &nbsp; &nbsp; &nbsp; 7876943319</b></p>
+                        <p><b>Village Ghumana , Tehesil Kumarsain, District Shimla, Himachal Pradesh</b>
+                        </p>
+                        <hr>
+                    </div>
                 </div>
                 <div>
-                    <br><br><br>
-                    <hr style="height:0.5px;border:none;color:#454545;background-color:#333;">
-                    <h1 class="section-title">VERNNIT VERMA</h1>
-                    <p class="divtext"><b>vernnit@gmail.com &nbsp; &nbsp; &nbsp; 7876943319</b></p>
-                    <p class="divtext"><b>Village Ghumana , Tehesil Kumarsain, District Shimla, Himachal Pradesh</b></p>
+                    <h4>OBJECTIVE</h4>
+                    <p><b>
+                            Enthusiastic and dedicated beginner seeking an internship. Eager to embark on a journey of
+                            practical exploration, I find joy in solving realistic problems , coding , performing
+                            experiments and
+                            observing results firsthand. Although new to the field, my strong work ethic and passion for
+                            hands on learning drive my commitment. Excited about the opportunity to apply theoretical
+                            knowledge to
+                            real-world scenarios, I am ready to contribute earnestly and learn extensively during my
+                            internship.</b></p>
                     <hr>
+
+                    <br>
+                    <h4>EDUCATION</h4>
+                    <h6 style="color:black;">National Institute of Technology Hamirpur <span class="right">2025</span>
+                    </h6>
+                    <p><b>B.Tech Engineering Physics (Physics and Photonics) (ongoing)</b></p>
+
+                    <h6 style="color:black;">D.A.V. SJVN Public School , Duttnagar , Himachal Pradesh
+                        <span class="right">2020</span>
+                    </h6>
+                    <p><b>Secondary Education (CBSE Board): 87.4%</b></p>
+
+                    <h6 style="color:black;">D.A.V. Public School , Kumarsain, Himachal Pradesh
+                        <span class="right">2018</span>
+                    </h6>
+                    <p><b>High School Education (CBSE Board): 90.6%</b></p>
+                    <hr>
+                    <br>
+                    <h4>KEY COMPETENCIES</h4>
+                    <ul>
+                        <li>Data-driven strategic planning</li>
+                        <li>Proficient in research methodology</li>
+                        <li>Effective teaching and mentoring abilities</li>
+                        <li>Strong report writing and presentation skills</li>
+                        <li>Advanced critical thinking capabilities</li>
+                        <li>Exceptional communication proficiency</li>
+                        <li>Proactive and self-motivated mindset</li>
+                        <li>UI/UX Design</li>
+                    </ul>
+                    <h4>SKILLS AND TOOLS</h4>
+                    <ul>
+                        <li>Python (Advanced proficiency)</li>
+                        <li>Data Structures and Algorithms</li>
+                        <li>Matlab (basic)</li>
+                        <li>Jupyter Notebooks</li>
+                        <li>Git and Github</li>
+                        <li>Figma (intermediate)</li>
+                        <li>Scientific writing</li>
+                        <li>Project management skills</li>
+
+                    </ul>
+                    <br>
+                    <hr>
+                    <h4>COURSEWORK</h4>
+                    <ul>
+                        <li>Data Structures and Algorithms</li>
+                        <li>Semiconductors</li>
+                        <li>Laser and Photonics</li>
+                        <li>Quantum Mechanics</li>
+                        <li>Classical Mechanics</li>
+                        <li>Nuclear Science</li>
+                        <li>Atomic and Molecular Physics</li>
+                        <li>Spectroscopy</li>
+                        <li>Plasma Physics</li>
+                        <li>Nanotechnology</li>
+                    </ul>
+                    <br>
+                    <hr>
+                    <h4>EXTRA CURRICULAR ACTIVITIES</h4>
+                    <ul>
+                        <li><b>Finance Team Member, Hill'ffair</b><br>
+                            National Institute of Technology Hamirpur<br><br>
+                            Contributed to the finance team for Hill'ffair, ensuring efficient financial operations and
+                            budget
+                            management for the annual cultural and technical festival.</li><br>
+                        <li><b>Discipline Club member , Hill’ffair</b><br>
+                            National Institute of Technology Hamirpur<br><br>
+                            Ensured Proper conduct of various events with in the campus in a disciplined manner ,
+                            ensuring
+                            proper obeyance of rules and regulations of our college.</li>
+
+                    </ul><br>
+                    <hr>
+                    <h4>INTERESTS AND HOBBIES</h4>
+                    <ul>
+                        <li>Volunteerism for Environmental Conservation Projects: Engaging in initiatives to</li>
+                        preserve and protect the environment.
+                        <li>Photography: Capturing moments and scenes that inspire, from nature to city scapes.</li>
+                        <li>Trekking and Hiking: Enjoying outdoor adventures and exploring new trails and peaks.</li>
+                        <li>Music Production : Enjoy producing music and writing songs.</li>
+                        <li>Cooking: Experimenting with flavors and cuisines to create delicious meals.</li>
+                        <li>Gardening: Nurturing plants and creating vibrant green spaces for relaxation.</li>
+                        <li>Drawing and sketching: I also enjoy my free time drawing and sketching a little bit.</li>
+
+                    </ul>
+                    <br>
+                    <hr>
+                    <br>
+                    <hr style="height:1px;border:none;color:#333;background-color:#333;">
+
                 </div>
             </div>
-            <div class="divtext">
-                <h4 class="htext class=" htext"">OBJECTIVE</h4>
-                <p class="divtext"><b>
-                        Enthusiastic and dedicated beginner seeking an internship. Eager to embark on a journey of
-                        practical exploration, I find joy in solving realistic problems , coding , performing
-                        experiments and
-                        observing results firsthand. Although new to the field, my strong work ethic and passion for
-                        hands on learning drive my commitment. Excited about the opportunity to apply theoretical
-                        knowledge to
-                        real-world scenarios, I am ready to contribute earnestly and learn extensively during my
-                        internship.</b></p>
-                <hr>
-
-                <br>
-                <h4 class="htext">EDUCATION</h4>
-                <h6 class="divtext" style="color:black;">National Institute of Technology Hamirpur <span
-                        class="right">2025</span>
-                </h6>
-                <p class="divtext"><b>B.Tech Engineering Physics (Physics and Photonics) (ongoing)</b></p>
-
-                <h6 class="divtext" style="color:black;">D.A.V. SJVN Public School , Duttnagar , Himachal Pradesh
-                    <span class="right">2020</span>
-                </h6>
-                <p class="divtext"><b>Secondary Education (CBSE Board): 87.4%</b></p>
-
-                <h6 class="divtext" style="color:black;">D.A.V. Public School , Kumarsain, Himachal Pradesh
-                    <span class="right">2018</span>
-                </h6>
-                <p class="divtext"><b>High School Education (CBSE Board): 90.6%</b></p>
-                <hr>
-                <br>
-                <h4 class="htext">KEY COMPETENCIES</h4>
-                <ul>
-                    <li>Data-driven strategic planning</li>
-                    <li>Proficient in research methodology</li>
-                    <li>Effective teaching and mentoring abilities</li>
-                    <li>Strong report writing and presentation skills</li>
-                    <li>Advanced critical thinking capabilities</li>
-                    <li>Exceptional communication proficiency</li>
-                    <li>Proactive and self-motivated mindset</li>
-                    <li>UI/UX Design</li>
-                </ul>
-                <h4 class="htext">SKILLS AND TOOLS</h4>
-                <ul>
-                    <li>Python (Advanced proficiency)</li>
-                    <li>Data Structures and Algorithms</li>
-                    <li>Matlab (basic)</li>
-                    <li>Jupyter Notebooks</li>
-                    <li>Git and Github</li>
-                    <li>Figma (intermediate)</li>
-                    <li>Scientific writing</li>
-                    <li>Project management skills</li>
-
-                </ul>
-                <br>
-                <hr>
-                <h4 class="htext">COURSEWORK</h4>
-                <ul>
-                    <li>Data Structures and Algorithms</li>
-                    <li>Semiconductors</li>
-                    <li>Laser and Photonics</li>
-                    <li>Quantum Mechanics</li>
-                    <li>Classical Mechanics</li>
-                    <li>Nuclear Science</li>
-                    <li>Atomic and Molecular Physics</li>
-                    <li>Spectroscopy</li>
-                    <li>Plasma Physics</li>
-                    <li>Nanotechnology</li>
-                </ul>
-                <br>
-                <hr>
-                <h4 class="htext">EXTRA CURRICULAR ACTIVITIES</h4>
-                <ul>
-                    <li><b>Finance Team Member, Hill'ffair</b><br>
-                        National Institute of Technology Hamirpur<br><br>
-                        Contributed to the finance team for Hill'ffair, ensuring efficient financial operations and
-                        budget
-                        management for the annual cultural and technical festival.</li><br>
-                    <li><b>Discipline Club member , Hill’ffair</b><br>
-                        National Institute of Technology Hamirpur<br><br>
-                        Ensured Proper conduct of various events with in the campus in a disciplined manner , ensuring
-                        proper obeyance of rules and regulations of our college.</li>
-
-                </ul><br>
-                <hr>
-                <h4 class="htext">INTERESTS AND HOBBIES</h4>
-                <ul>
-                    <li>Volunteerism for Environmental Conservation Projects: Engaging in initiatives to</li>
-                    preserve and protect the environment.
-                    <li>Photography: Capturing moments and scenes that inspire, from nature to city scapes.</li>
-                    <li>Trekking and Hiking: Enjoying outdoor adventures and exploring new trails and peaks.</li>
-                    <li>Music Production : Enjoy producing music and writing songs.</li>
-                    <li>Cooking: Experimenting with flavors and cuisines to create delicious meals.</li>
-                    <li>Gardening: Nurturing plants and creating vibrant green spaces for relaxation.</li>
-                    <li>Drawing and sketching: I also enjoy my free time drawing and sketching a little bit.</li>
-
-                </ul>
-                <br>
-                <hr>
-                <br>
-                <hr style="height:1px;border:none;color:#333;background-color:#333;">
-
-            </div>
-        </div>
+        </section>
     </section>
     <!--End of Resume Section-->
 
