--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     <!--Resume Section-->
     <section class="section" id="resume">
         <section class="resumesection">
-            <div class="page" data-size="A4">
+            <div>
                 <div class="container text-center">
                     <div class="resume">
                         <p class="section-subtitle">Curriculum Vitae ?</p>
