--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     <!--Resume Section-->
     <section class="section" id="resume">
         <section class="resumesection">
-            <div>
+            <div class="center">
                 <div class="container text-center">
                     <div class="resume">
                         <p class="section-subtitle">Curriculum Vitae ?</p>
