--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         <div class="divcontainer">
             <div class="container text-center">
                 <div class="resume">
-                    <p class="section-subtitle">Curriculum Vitae ?</p>
+                    <p class="section-subtitle">Curriculum Vitae</p>
                     <h2 class="section-title mb-3">My Resume</h2>
                 </div>
                 <div>
