--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
             <p class="section-subtitle">How can you communicate?</p>
             <h6 class="section-title mb-5">Contact Me</h6>
             <!-- contact form -->
-            <form action="mailto:vernnit@gmail.com" method="post" enctype="text/plain" class="contact-form col-md-10 col-lg-8 m-auto">
+            <form action="mailto:vernnit@gmail.com" method="post" enctype="utf-8" class="contact-form col-md-10 col-lg-8 m-auto">
                 <div class="form-row">
                     <div class="form-group col-sm-6">
                         <input name="Name" type="text" size="50" class="form-control" placeholder="Your Name" required>
