--- a/index.html
+++ b/index.html
@@ -402,8 +402,8 @@
         <footer class="footer">
             <div class="social-links text-center m-auto ml-sm-auto">
                 <a href="tel:+917876943319" class="link"><i class="ti-mobile"></i></a>
-                <a href="" class="link"><i class="ti-instagram"></i></a>
-                <a href="21bph023@nith.ac.in" class="link"><i class="ti-email"></i></a>
+                <a href="https://www.instagram.com/vernnitverma1221/" class="link"><i class="ti-instagram"></i></a>
+                <a href="mailto: 21bph023@nith.ac.in" class="link"><i class="ti-email"></i></a>
                 <a href="https://github.com/Vernnit
                 " class="link"><i class="ti-github"></i></a>
                 <a href="https://www.linkedin.com/in/vernnit-verma-0a64b1230" class="link"><i
